Fix order of items in hover announcements and exclude collapsed items

--- a/src/internal/components/chart-series-details/styles.scss
+++ b/src/internal/components/chart-series-details/styles.scss
@@ -84,3 +84,7 @@
 .full-width {
   width: 100%;
 }
+
+.announced {
+  /* Used by getSeriesDetailText to select text to be announced by screen readers */
+}
